# dsdcc

./: .gitignore  CHANGELOG  CMakeLists.txt  Readme.md  crc.cpp  crc.h  descramble.cpp  descramble.h  dmr.cpp  dmr.h  dmr_data.cpp  dmr_data.h  dmr_voice.cpp  dmr_voice.h  doublebuffer.h  dpmr.cpp  dpmr.h  dsd_decoder.cpp  dsd_decoder.h  dsd_dvserial.cpp  dsd_dvserial.h  dsd_filters.cpp  dsd_filters.h  dsd_logger.cpp  dsd_logger.h  dsd_main.cpp  dsd_mbe.cpp  dsd_mbe.h  dsd_mbelib.h  dsd_opts.cpp  dsd_opts.h  dsd_state.cpp  dsd_state.h  dsd_symbol.cpp  dsd_symbol.h  dsd_sync.cpp  dsd_sync.h  dsd_upsample.cpp  dsd_upsample.h  dstar.cpp  (+37 more)
.github/workflows/: stale.yml
cmake/: libdsdcc.pc.in
cmake/Modules/: FindLibMbe.cmake  FindSerialDV.cmake
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sdrangel.cron.d.ex  sdrangel.default.ex  sdrangel.doc-base.EX  watch.ex
samples/: Readme.md  dmr_it_8.dis  dpmr.dis  dstar_f1zil_2.dis
testfec/: Makefile  crc  crc.cpp  golay.cpp  golay20.cpp  golay23.cpp  golay24.cpp  hamming12.cpp  hamming15  hamming15.cpp  hamming16.cpp  hamming7.cpp  pn.cpp  qr.cpp  viterbi.cpp  viterbi3.cpp  viterbi35  viterbi35.cpp
